--- a/Family/fontFamily/src/components/grid/contenedor.scss
+++ b/Family/fontFamily/src/components/grid/contenedor.scss
@@ -18,6 +18,7 @@
   align-items: center;
   flex-direction: column;
 
+
   .instrucciones {
     margin: 0;
     font-size: 1rem;
@@ -28,6 +29,7 @@
 
   .inputBuscador {
     margin-top: 1rem;
+    margin-bottom: 4rem;
     padding-left: 1rem;
     width: 22rem;
     height: 3rem;
