--- a/Family/fontFamily/src/components/gridUno/gridUno.scss
+++ b/Family/fontFamily/src/components/gridUno/gridUno.scss
@@ -3,32 +3,45 @@
     transform: rotateY(360deg);
   }
 }
+@keyframes girar {
+  0% {
+    transform: rotate(0deg); // La línea comienza en la posición inicial
+  }
+  100% {
+    transform: rotate(360deg); // La línea completa un giro completo
+  }
+}
 
 .gridUno {
-  height: 200px;
-  width: 80%;
-  margin: 0 auto;
+  height: 190px;
   position: relative;
-  padding: 0.1rem 0 0 1rem;
-  border: 1px solid white;
+  padding: 0.1rem 0 0 2rem;
+  border-radius: 10px;
+  box-shadow: -5px -5px 25px -6px rgba(208, 208, 216, 0.808);
+  overflow: hidden;
+  color: rgba(208, 208, 216, 0.918);
 
   .h2GridUno {
     font-size: 2.5rem;
+    margin: 1.5rem 0 0 2rem;
   }
 
   .pGridUno {
     font-size: 1rem;
     width: 60%;
+    text-wrap: balance;
+    margin: 1.5rem 0 0 2rem;
   }
 }
 
 .rotacion {
   position: absolute;
-  bottom: -15%;
-  left: 86%;
+  bottom: -20%;
+  left: 80%;
   font-size: 100px;
   font-weight: bold;
   color: #ffffff;
   animation: rotateX 4s linear infinite;
   transform-style: preserve-3d;
+  text-shadow: 10px 1px 7px rgba(255, 255, 255, 0.5);
 }
