--- a/Family/fontFamily/src/components/grid/contenedor.scss
+++ b/Family/fontFamily/src/components/grid/contenedor.scss
@@ -50,4 +50,13 @@
   align-items: center;
   width: 90%;
   margin: 0 auto;
+  color: rgba(208, 208, 216, 0.918);;
+}
+
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: auto;
+  gap: 2.5rem;
 }
