--- a/Family/fontFamily/src/components/gridUno/gridUno.scss
+++ b/Family/fontFamily/src/components/gridUno/gridUno.scss
@@ -19,7 +19,7 @@
   border-radius: 10px;
   box-shadow: -5px -5px 25px -6px rgba(208, 208, 216, 0.808);
   overflow: hidden;
-  color: rgba(208, 208, 216, 0.918);
+  grid-column: 1 / -1;
 
   .h2GridUno {
     font-size: 2.5rem;
