--- a/Family/fontFamily/src/components/grid/contenedor.scss
+++ b/Family/fontFamily/src/components/grid/contenedor.scss
@@ -50,7 +50,7 @@
   align-items: center;
   width: 90%;
   margin: 0 auto;
-  color: rgba(208, 208, 216, 0.918);;
+  color: rgba(208, 208, 216, 0.918);
 }
 
 
