--- a/Family/fontFamily/src/components/navbar/navbar.scss
+++ b/Family/fontFamily/src/components/navbar/navbar.scss
@@ -2,6 +2,10 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
+
+  @media screen and (min-width: 1000px) {
+    justify-content: space-between;
+  }
 }
 
 .ulNav {
