--- a/Family/fontFamily/src/components/gridDos/gridDos.scss
+++ b/Family/fontFamily/src/components/gridDos/gridDos.scss
@@ -5,16 +5,51 @@
   position: relative;
 
   .calendario {
-    font-size: 2rem;
+    font-size: 1.7rem;
     position: absolute;
     margin: 0;
-    top: 6%;
-    left: 34%;
+    top: 3%;
+    left: 7%;
+  }
+
+  .mes {
+    font-size: 1.7rem;
+    position: absolute;
+    margin: 0;
+    top: 3.7%;
+    left: 76%;
+  }
+
+  .brCalendarioTop {
+  position: absolute;
+  top: 10%;
+  left: 5%;
+  width: 90%;
+  border: 0.5px solid rgb(255, 255, 255);
+  }
+
+
+  .brCalendarioButtom {
+    position: absolute;
+    bottom: 10%;
+    left: 5%;
+    width: 90%;
+    border: 0.5px solid rgb(255, 255, 255);
   }
 
   .th {
     text-align: center;
-    font-size: 1.3rem;
+    font-size: 1.2rem;
+    vertical-align: top;
+    height: 30px;
   }
 
+  .btnCalendario {
+    background-color: white;
+    position: absolute;
+    bottom: 4%;
+    right: 4%;
+    height: 2rem;
+    width: 6rem;
+  }
 }
