--- a/Family/fontFamily/src/styles/App.scss
+++ b/Family/fontFamily/src/styles/App.scss
@@ -6,4 +6,8 @@
     width: 85%;
     margin: 0 auto;
     color: white;
+
+    @media screen and (min-width: 1000px) {
+        width: 98%;
+    }
 }
