--- a/Family/fontFamily/src/components/gridDos/gridDos.scss
+++ b/Family/fontFamily/src/components/gridDos/gridDos.scss
@@ -1,55 +1,67 @@
-.gridDos {
-  padding: 4.5rem 1rem 2rem 1rem;
-  border-radius: 10px;
-  box-shadow: -1px -1px 9px -3px rgba(208, 208, 216, 0.808);
+.containerGridTable {
   position: relative;
 
-  .calendario {
-    font-size: 1.7rem;
-    position: absolute;
-    margin: 0;
-    top: 3%;
-    left: 7%;
-  }
+  .gridDos {
+    padding: 4.5rem 1rem 2rem 1rem;
+    border-radius: 10px;
+    box-shadow: -1px -1px 9px -3px rgba(208, 208, 216, 0.808);
+    width: 100%;
+    height: 100%;
+    
+    .calendario {
+      position: absolute;
+      font-size: 1.6rem;
+      margin: 0;
+      top: 3%;
+      left: 7%;
+    }
 
-  .mes {
-    font-size: 1.7rem;
-    position: absolute;
-    margin: 0;
-    top: 3.7%;
-    left: 76%;
-  }
+    .mes {
+      font-size: 1.6rem;
+      position: absolute;
+      margin: 0;
+      top: 3.7%;
+      left: 76%;
+    }
 
-  .brCalendarioTop {
-  position: absolute;
-  top: 10%;
-  left: 5%;
-  width: 90%;
-  border: 0.5px solid rgb(255, 255, 255);
-  }
+    .brCalendarioTop {
+      position: absolute;
+      top: 10%;
+      left: 5%;
+      width: 90%;
+      border: 0.5px solid rgba(255, 255, 255, 0.925);
+    }
 
+    .brCalendarioButtom {
+      position: absolute;
+      bottom: 14%;
+      left: 5%;
+      width: 90%;
+      border: 0.5px solid rgba(255, 255, 255, 0.925);
+    }
 
-  .brCalendarioButtom {
-    position: absolute;
-    bottom: 10%;
-    left: 5%;
-    width: 90%;
-    border: 0.5px solid rgb(255, 255, 255);
-  }
+    .th {
+      text-align: center;
+      font-size: 1.2rem;
+      vertical-align: top;
+      height: 30px;
+      padding: 0;
+    }
 
-  .th {
-    text-align: center;
-    font-size: 1.2rem;
-    vertical-align: top;
-    height: 30px;
-  }
+    .btnCalendario {
+      background-color: rgb(88, 5, 64);
+      border: none;
+      border-radius: 10px;
+      position: absolute;
+      bottom: 5%;
+      right: 4%;
+      height: 2rem;
+      width: 7.5rem;
+      color: white;
 
-  .btnCalendario {
-    background-color: white;
-    position: absolute;
-    bottom: 4%;
-    right: 4%;
-    height: 2rem;
-    width: 6rem;
+      &:hover {
+        cursor: pointer;
+      }
+    }
   }
 }
