--- a/Family/fontFamily/src/components/gridTres/gridTres.scss
+++ b/Family/fontFamily/src/components/gridTres/gridTres.scss
@@ -7,10 +7,10 @@
 
     .titleGridTres {
         font-size: 2rem;
-        margin: 0;
+        margin: -0.2rem 0 0 0;
         text-align: center;
     }
-    
+
     .titulos {
         margin: 0;
         padding-top: 0.7rem;
