--- a/Family/fontFamily/src/components/gridDos/gridDos.scss
+++ b/Family/fontFamily/src/components/gridDos/gridDos.scss
@@ -1,44 +1,46 @@
 .containerGridTable {
   position: relative;
 
+  .brCalendarioTop {
+    position: absolute;
+    top: 8%;
+    left: 5%;
+    width: 90%;
+    border: none;
+    border-top: 1px solid rgba(208, 208, 216, 0.466);
+  }
+
+  .brCalendarioButtom {
+    position: absolute;
+    bottom: 10%;
+    left: 5%;
+    width: 90%;
+    border: none;
+    border-top: 1px solid rgba(208, 208, 216, 0.466);
+  }
+
+  .calendario {
+    position: absolute;
+    font-size: 1.6rem;
+    margin: 0;
+    top: 3%;
+    left: 7%;
+  }
+
+  .mes {
+    font-size: 1.6rem;
+    position: absolute;
+    margin: 0;
+    top: 3.7%;
+    left: 76%;
+  }
+
   .gridDos {
-    padding: 4.5rem 1rem 2rem 1rem;
+    padding: 4rem 1rem 4rem 1rem;
     border-radius: 10px;
     box-shadow: -1px -1px 9px -3px rgba(208, 208, 216, 0.808);
     width: 100%;
     height: 100%;
-
-    .calendario {
-      position: absolute;
-      font-size: 1.6rem;
-      margin: 0;
-      top: 3%;
-      left: 7%;
-    }
-
-    .mes {
-      font-size: 1.6rem;
-      position: absolute;
-      margin: 0;
-      top: 3.7%;
-      left: 76%;
-    }
-
-    .brCalendarioTop {
-      position: absolute;
-      top: 10%;
-      left: 5%;
-      width: 90%;
-      border: 0.5px solid rgba(255, 255, 255, 0.925);
-    }
-
-    .brCalendarioButtom {
-      position: absolute;
-      bottom: 14%;
-      left: 5%;
-      width: 90%;
-      border: 0.5px solid rgba(255, 255, 255, 0.925);
-    }
 
     .th {
       text-align: center;
@@ -53,7 +55,7 @@
     border: none;
     border-radius: 10px;
     position: absolute;
-    bottom: 5%;
+    bottom: 4%;
     right: 4%;
     height: 2rem;
     width: 7.5rem;
