--- a/Family/fontFamily/src/components/grid/contenedor.scss
+++ b/Family/fontFamily/src/components/grid/contenedor.scss
@@ -18,7 +18,6 @@
   align-items: center;
   flex-direction: column;
 
-
   .instrucciones {
     margin: 0;
     font-size: 1rem;
@@ -48,15 +47,20 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 90%;
+  width: 96.3%;
   margin: 0 auto;
   color: rgba(208, 208, 216, 0.918);
-}
 
+  font-size: 1em;
+  line-height: 1;
+  letter-spacing: 0.1px;
+  word-spacing: 0.1px;
+  text-transform: none;
 
-.grid {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: auto;
-  gap: 2.5rem;
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: minmax(170px, auto);
+    gap: 2.5rem;
+  }
 }
