--- a/Family/fontFamily/src/components/gridUno/gridUno.scss
+++ b/Family/fontFamily/src/components/gridUno/gridUno.scss
@@ -13,7 +13,6 @@
 }
 
 .gridUno {
-  height: 190px;
   position: relative;
   padding: 0.1rem 0 0 2rem;
   border-radius: 10px;
@@ -30,7 +29,7 @@
     font-size: 1rem;
     width: 60%;
     text-wrap: balance;
-    margin: 1.5rem 0 0 2rem;
+    margin: 1.5rem 0 1.2rem 2rem;
   }
 }
 
