--- a/Family/fontFamily/src/components/gridDos/gridDos.scss
+++ b/Family/fontFamily/src/components/gridDos/gridDos.scss
@@ -31,7 +31,7 @@
     font-size: 1.6rem;
     position: absolute;
     margin: 0;
-    top: 3.7%;
+    top: 3.2%;
     left: 76%;
   }
 
@@ -51,7 +51,7 @@
     }
   }
   .btnCalendario {
-    background-color: rgb(88, 5, 64);
+    background-color: rgba(208, 208, 216, 0.808);
     border: none;
     border-radius: 10px;
     position: absolute;
@@ -59,11 +59,11 @@
     right: 4%;
     height: 2rem;
     width: 7.5rem;
-    color: white;
+    color: rgb(0, 0, 0);
 
     &:hover {
       cursor: pointer;
-      background-color: rgb(151, 23, 115);
+      background-color: rgb(255, 255, 255);
     }
   }
 }
