--- a/Family/fontFamily/src/styles/App.scss
+++ b/Family/fontFamily/src/styles/App.scss
@@ -1,13 +1,11 @@
-* {
-    background-color: rgb(14, 14, 17);
-}
+html, .body {
+  width: 88%;
+  margin: 0 auto;
+  color: white;
+  background-color: rgb(3, 3, 3);  
+  font-family: Arial, Helvetica, sans-serif;
 
-.body {
-    width: 80%;
-    margin: 0 auto;
-    color: white;
-
-    @media screen and (max-width: 1000px) {
-        width: 98%;
-    }
+  @media screen and (max-width: 1000px) {
+    width: 98%;
+  }
 }
