--- a/Family/fontFamily/src/components/gridCuatro/gridCuatro.scss
+++ b/Family/fontFamily/src/components/gridCuatro/gridCuatro.scss
@@ -4,6 +4,12 @@
   padding: 1rem 1rem 2rem 1rem;
   margin: 0;
 
+  .hrDetalles {
+    margin: 0.5rem 0 0 0;
+    border: none;
+    border-top: 1px solid rgba(208, 208, 216, 0.466);
+  }
+
   .detalles {
     margin: -0.2rem 0 0 0;
     text-align: center;
@@ -12,5 +18,41 @@
 
   .nombreFuente {
     font-size: 1.3rem;
+  }
+
+  .containerBoton {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 4rem;
+
+    .btnAnterior {
+      border-radius: 10px;
+      width: 7rem;
+      height: 2.3rem;
+      background-color: rgba(208, 208, 216, 0.808);
+      border: none;
+
+      &:hover {
+        cursor: pointer;
+        background-color: rgba(255, 255, 255, 0.808);
+        transition: all 0.3s;
+        box-shadow: 0.1em 0.1em 0.6em 0.2em #7b52b9;
+      }
+    }
+
+    .btnSiguiente {
+      border-radius: 10px;
+      width: 7rem;
+      height: 2.3rem;
+      background-color: rgba(208, 208, 216, 0.808);
+      border: none;
+      transition: all 0.3s;
+
+      &:hover {
+        cursor: pointer;
+        background-color: rgba(255, 255, 255, 0.808);
+        box-shadow: 0.1em 0.1em 0.6em 0.2em #7b52b9;
+      }
+    }
   }
 }
