--- a/Family/fontFamily/src/components/gridDos/gridDos.scss
+++ b/Family/fontFamily/src/components/gridDos/gridDos.scss
@@ -63,7 +63,9 @@
 
     &:hover {
       cursor: pointer;
-      background-color: rgb(255, 255, 255);
+      background-color: rgba(255, 255, 255, 0.808);
+      transition: all 0.3s;
+      box-shadow: 0.1em 0.1em 0.6em 0.2em #7b52b99f;
     }
   }
 }
