--- a/Family/fontFamily/src/styles/App.scss
+++ b/Family/fontFamily/src/styles/App.scss
@@ -3,7 +3,7 @@ html, .body {
   margin: 0 auto;
   color: white;
   background-color: rgb(3, 3, 3);  
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "ABeeZee", sans-serif;
 
 
   @media screen and (max-width: 1000px) {
