--- a/Family/fontFamily/src/components/grid/contenedor.scss
+++ b/Family/fontFamily/src/components/grid/contenedor.scss
@@ -4,7 +4,7 @@
 }
 
 .titulo {
-  width: 27rem;
+  width: 28rem;
   margin: 0 auto;
 
   .h1Principal {
@@ -19,28 +19,17 @@
   flex-direction: column;
 
   .instrucciones {
-    margin: 0;
+    margin: 0rem 0 2rem 0;
     font-size: 1rem;
     width: 16rem;
     text-align: center;
     color: rgba(208, 208, 216, 0.808);
-  }
 
-  .inputBuscador {
-    margin-top: 1rem;
-    margin-bottom: 4rem;
-    padding-left: 1rem;
-    width: 22rem;
-    height: 3rem;
-    border-radius: 9999px;
-    background-color: #18181b;
-    color: white;
-    border: 1px solid #ffffff65;
-
-    &::placeholder {
-      color: rgba(208, 208, 216, 0.808);
+    .detalles {
+      color: #7b52b9f8;;
     }
   }
+
 }
 
 .container {
