--- a/Family/fontFamily/src/components/gridUno/gridUno.scss
+++ b/Family/fontFamily/src/components/gridUno/gridUno.scss
@@ -45,3 +45,14 @@
   transform-style: preserve-3d;
   text-shadow: 10px 1px 7px rgba(255, 255, 255, 0.5);
 }
+
+@media screen and (max-width: 1536px) { 
+  .gridUno {
+    width: 100%;
+    padding: 0;
+
+    .pGridUno {
+      width: 61%;
+    }
+  }
+}
