--- a/Family/fontFamily/src/components/gridDos/gridDos.scss
+++ b/Family/fontFamily/src/components/gridDos/gridDos.scss
@@ -40,6 +40,7 @@
 
   .gridDos {
     padding: 4rem 1rem 4rem 1rem;
+    width: 100%;
     height: 100%;
 
     .th {
@@ -93,6 +94,32 @@
     .brCalendarioButtom {
       left: 14%;
       width: 70%;
+    }
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .containerGridTable {
+    .brCalendarioTop {
+      left: 5%;
+      width: 90%;
+    }
+    
+    .calendario {
+      left: 8%;
+    }
+
+    .mes {
+      left: 81%;
+    }
+    .gridDos { 
+      width: 100%;
+      padding-left: 4%;
+    }
+
+    .brCalendarioButtom {
+      left: 5%;
+      width: 90%;
     }
   }
 }
