--- a/Family/fontFamily/src/styles/App.scss
+++ b/Family/fontFamily/src/styles/App.scss
@@ -6,6 +6,7 @@ html, .body {
   font-family: "ABeeZee", sans-serif;
 
   @media screen and (max-width: 1536px) {
+    margin: 0;
     width: 100%;
   }
 }
